# solana_test

./: .gitignore  README.md  install.md  test_confirm.js
frontend/: client.mjs
programs/my_solana/: Cargo.toml
programs/my_solana/src/: lib.rs
