[package]
name = "my_solana_program"
version = "0.1.0"
edition = "2021"
description = "A Solana program written in Rust"
license = "WTFPL"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.0"
borsh = "0.10.3"
thiserror = "1.0.49"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"

[lib]
crate-type = ["cdylib", "lib"]